--- a/ExerciseGO/Views/Home/Index.cshtml
+++ b/ExerciseGO/Views/Home/Index.cshtml
@@ -14,10 +14,10 @@
     {
         <div class="row container">
             <div class="col-md-2 col-md-offset-5">
-                <button id="showAll"><a href="~/Account/Login">Login</a></button>
+                <button class="showAll" id="login" onclick="login()">Login</button>
             </div>
             <div class="col-md-2">
-                <button id="showAll"><a href="~/Account/Register">Register</a></button>
+                <button class="showAll" id="register" onclick="register()">Register</button>
             </div>
         </div>
     }
@@ -65,8 +65,8 @@
         <div class="col-md-7">
             <div class="row">
                 <div class="col-md-5">
-                    <div class="row topBtnPos"><a id="showAll" href="~/ActivityLogs/Create">Record Activity</a></div>
-                    <div class="row bottomBtnPos"><a id="showAll" href="~/ActivityLogs/Index">Legs Activity History</a></div>
+                    <div class="row topBtnPos"><a class="showAll" href="~/ActivityLogs/Create">Record Activity</a></div>
+                    <div class="row bottomBtnPos"><a class="showAll" href="~/ActivityLogs/Index?#legsActivity">Legs Activity History</a></div>
                 </div>
                 <div class="col-md-7">
                     <div class="row" style="margin-top: 40px; text-align:left;font-family: 'Raleway', sans-serif; ">
@@ -83,8 +83,8 @@
         <div class="col-md-7">
             <div class="row">
                 <div class="col-md-5">
-                    <div class="row topBtnPos"><a id="showAll" href="~/ActivityLogs/Create">Record Activity</a></div>
-                    <div class="row bottomBtnPos"><a id="showAll" href="~/ActivityLogs/Index?#legsActivity">Legs Activity History</a></div>
+                    <div class="row topBtnPos"><a class="showAll" href="~/ActivityLogs/Create">Record Activity</a></div>
+                    <div class="row bottomBtnPos"><a class="showAll" href="~/ActivityLogs/Index?#legsActivity">Legs Activity History</a></div>
                 </div>
                 <div class="col-md-7">
                     <div class="row" style="margin-top: 40px; text-align:left; font-family: 'Raleway', sans-serif;">
@@ -101,8 +101,8 @@
         <div class="col-md-7">
             <div class="row">
                 <div class="col-md-5">
-                    <div class="row topBtnPos"><a id="showAll" href="~/ActivityLogs/Create">Record Activity</a></div>
-                    <div class="row bottomBtnPos"><a id="showAll" href="~/ActivityLogs/Index?#legsActivity">Legs Activity History</a></div>
+                    <div class="row topBtnPos"><a class="showAll" href="~/ActivityLogs/Create">Record Activity</a></div>
+                    <div class="row bottomBtnPos"><a class="showAll" href="~/ActivityLogs/Index?#legsActivity">Legs Activity History</a></div>
                 </div>
                 <div class="col-md-7">
                     <div class="row" style="margin-top: 40px; text-align:left;">
@@ -119,8 +119,8 @@
         <div class="col-md-7">
             <div class="row">
                 <div class="col-md-5">
-                    <div class="row topBtnPos"><a id="showAll" href="~/ActivityLogs/Create">Record Activity</a></div>
-                    <div class="row bottomBtnPos"><a id="showAll" href="~/ActivityLogs/Index?#legsActivity">Legs Activity History</a></div>
+                    <div class="row topBtnPos"><a class="showAll" href="~/ActivityLogs/Create">Record Activity</a></div>
+                    <div class="row bottomBtnPos"><a class="showAll" href="~/ActivityLogs/Index?#legsActivity">Legs Activity History</a></div>
                 </div>
                 <div class="col-md-7">
                     <div class="row" style="margin-top: 40px; text-align:left;">
@@ -137,8 +137,8 @@
         <div class="col-md-7">
             <div class="row">
                 <div class="col-md-5">
-                    <div class="row topBtnPos"><a id="showAll" href="~/ActivityLogs/Create">Record Activity</a></div>
-                    <div class="row bottomBtnPos"><a id="showAll" href="~/ActivityLogs/Index?#legsActivity">Legs Activity History</a></div>
+                    <div class="row topBtnPos"><a class="showAll" href="~/ActivityLogs/Create">Record Activity</a></div>
+                    <div class="row bottomBtnPos"><a class="showAll" href="~/ActivityLogs/Index?#legsActivity">Legs Activity History</a></div>
                 </div>
                 <div class="col-md-7">
                     <div class="row" style="margin-top: 40px; text-align:left;">
@@ -155,8 +155,8 @@
         <div class="col-md-7">
             <div class="row">
                 <div class="col-md-5">
-                    <div class="row topBtnPos"><a id="showAll" href="~/ActivityLogs/Create">Record Activity</a></div>
-                    <div class="row bottomBtnPos"><a id="showAll" href="~/ActivityLogs/Index?#legsActivity">Legs Activity History</a></div>
+                    <div class="row topBtnPos"><a class="showAll" href="~/ActivityLogs/Create">Record Activity</a></div>
+                    <div class="row bottomBtnPos"><a class="showAll" href="~/ActivityLogs/Index?#legsActivity">Legs Activity History</a></div>
                 </div>
                 <div class="col-md-7">
                     <div class="row" style="margin-top: 40px; text-align:left;">
@@ -179,8 +179,8 @@
         <div class="col-md-7">
             <div class="row">
                 <div class="col-md-5">
-                    <div class="row topBtnPos"><a id="showAll" href="~/ActivityLogs/Create">Record Activity</a></div>
-                    <div class="row bottomBtnPos"><a id="showAll" href="~/ActivityLogs/Index?#armsActivity">Arms Activity History</a></div>
+                    <div class="row topBtnPos"><a class="showAll" href="~/ActivityLogs/Create">Record Activity</a></div>
+                    <div class="row bottomBtnPos"><a class="showAll" href="~/ActivityLogs/Index?#armsActivity">Arms Activity History</a></div>
                 </div>
                 <div class="col-md-7">
                     <div class="row" style="margin-top: 40px; text-align:left;font-family: 'Raleway', sans-serif;">
@@ -197,8 +197,8 @@
         <div class="col-md-7">
             <div class="row">
                 <div class="col-md-5">
-                    <div class="row topBtnPos"><a id="showAll" href="~/ActivityLogs/Create">Record Activity</a></div>
-                    <div class="row bottomBtnPos"><a id="showAll" href="~/ActivityLogs/Index?#armsActivity">Arms Activity History</a></div>
+                    <div class="row topBtnPos"><a class="showAll" href="~/ActivityLogs/Create">Record Activity</a></div>
+                    <div class="row bottomBtnPos"><a class="showAll" href="~/ActivityLogs/Index?#armsActivity">Arms Activity History</a></div>
                 </div>
                 <div class="col-md-7">
                     <div class="row" style="margin-top: 40px; text-align:left;font-family: 'Raleway', sans-serif;">
@@ -215,8 +215,8 @@
         <div class="col-md-7">
             <div class="row">
                 <div class="col-md-5">
-                    <div class="row topBtnPos"><a id="showAll" href="~/ActivityLogs/Create">Record Activity</a></div>
-                    <div class="row bottomBtnPos"><a id="showAll" href="~/ActivityLogs/Index?#armsActivity">Arms Activity History</a></div>
+                    <div class="row topBtnPos"><a class="showAll" href="~/ActivityLogs/Create">Record Activity</a></div>
+                    <div class="row bottomBtnPos"><a class="showAll" href="~/ActivityLogs/Index?#armsActivity">Arms Activity History</a></div>
                 </div>
                 <div class="col-md-7">
                     <div class="row" style="margin-top: 40px; text-align:left;">
@@ -233,8 +233,8 @@
         <div class="col-md-7">
             <div class="row">
                 <div class="col-md-5">
-                    <div class="row topBtnPos"><a id="showAll" href="~/ActivityLogs/Create">Record Activity</a></div>
-                    <div class="row bottomBtnPos"><a id="showAll" href="~/ActivityLogs/Index?#armsActivity">Arms Activity History</a></div>
+                    <div class="row topBtnPos"><a class="showAll" href="~/ActivityLogs/Create">Record Activity</a></div>
+                    <div class="row bottomBtnPos"><a class="showAll" href="~/ActivityLogs/Index?#armsActivity">Arms Activity History</a></div>
                 </div>
                 <div class="col-md-7">
                     <div class="row" style="margin-top: 40px; text-align:left;">
@@ -257,8 +257,8 @@
         <div class="col-md-7">
             <div class="row">
                 <div class="col-md-5">
-                    <div class="row topBtnPos"><a id="showAll" href="~/ActivityLogs/Create">Record Activity</a></div>
-                    <div class="row bottomBtnPos"><a id="showAll" href="~/ActivityLogs/Index?#backActivity">Back Activity History</a></div>
+                    <div class="row topBtnPos"><a class="showAll" href="~/ActivityLogs/Create">Record Activity</a></div>
+                    <div class="row bottomBtnPos"><a class="showAll" href="~/ActivityLogs/Index?#backActivity">Back Activity History</a></div>
                 </div>
                 <div class="col-md-7">
                     <div class="row" style="margin-top: 40px; text-align:left; font-family: 'Raleway', sans-serif;">
@@ -275,8 +275,8 @@
         <div class="col-md-7">
             <div class="row">
                 <div class="col-md-5">
-                    <div class="row topBtnPos"><a id="showAll" href="~/ActivityLogs/Create">Record Activity</a></div>
-                    <div class="row bottomBtnPos"><a id="showAll" href="~/ActivityLogs/Index?#backActivity">Back Activity History</a></div>
+                    <div class="row topBtnPos"><a class="showAll" href="~/ActivityLogs/Create">Record Activity</a></div>
+                    <div class="row bottomBtnPos"><a class="showAll" href="~/ActivityLogs/Index?#backActivity">Back Activity History</a></div>
                 </div>
                 <div class="col-md-7">
                     <div class="row" style="margin-top: 40px; text-align:left; font-family: 'Raleway', sans-serif;">
@@ -293,8 +293,8 @@
         <div class="col-md-7">
             <div class="row">
                 <div class="col-md-5">
-                    <div class="row topBtnPos"><a id="showAll" href="~/ActivityLogs/Create">Record Activity</a></div>
-                    <div class="row bottomBtnPos"><a id="showAll" href="~/ActivityLogs/Index?#backActivity">Back Activity History</a></div>
+                    <div class="row topBtnPos"><a class="showAll" href="~/ActivityLogs/Create">Record Activity</a></div>
+                    <div class="row bottomBtnPos"><a class="showAll" href="~/ActivityLogs/Index?#backActivity">Back Activity History</a></div>
                 </div>
                 <div class="col-md-7">
                     <div class="row" style="margin-top: 40px; text-align:left;">
@@ -311,8 +311,8 @@
         <div class="col-md-7">
             <div class="row">
                 <div class="col-md-5">
-                    <div class="row topBtnPos"><a id="showAll" href="~/ActivityLogs/Create">Record Activity</a></div>
-                    <div class="row bottomBtnPos"><a id="showAll" href="~/ActivityLogs/Index?#backActivity">Back Activity History</a></div>
+                    <div class="row topBtnPos"><a class="showAll" href="~/ActivityLogs/Create">Record Activity</a></div>
+                    <div class="row bottomBtnPos"><a class="showAll" href="~/ActivityLogs/Index?#backActivity">Back Activity History</a></div>
                 </div>
                 <div class="col-md-7">
                     <div class="row" style="margin-top: 40px; text-align:left;">
@@ -333,8 +333,8 @@
         <div class="col-md-7">
             <div class="row">
                 <div class="col-md-5">
-                    <div class="row topBtnPos"><a id="showAll" href="~/ActivityLogs/Create">Record Activity</a></div>
-                    <div class="row bottomBtnPos"><a id="showAll" href="~/ActivityLogs/Index?#chestActivity">Chest Activity History</a></div>
+                    <div class="row topBtnPos"><a class="showAll" href="~/ActivityLogs/Create">Record Activity</a></div>
+                    <div class="row bottomBtnPos"><a class="showAll" href="~/ActivityLogs/Index?#chestActivity">Chest Activity History</a></div>
                 </div>
                 <div class="col-md-7">
                     <div class="row" style="margin-top: 40px; text-align:left; font-family: 'Raleway', sans-serif;">
@@ -351,8 +351,8 @@
         <div class="col-md-7">
             <div class="row">
                 <div class="col-md-5">
-                    <div class="row topBtnPos"><a id="showAll" href="~/ActivityLogs/Create">Record Activity</a></div>
-                    <div class="row bottomBtnPos"><a id="showAll" href="~/ActivityLogs/Index?#backActivity">Back Activity History</a></div>
+                    <div class="row topBtnPos"><a class="showAll" href="~/ActivityLogs/Create">Record Activity</a></div>
+                    <div class="row bottomBtnPos"><a class="showAll" href="~/ActivityLogs/Index?#backActivity">Chest Activity History</a></div>
                 </div>
                 <div class="col-md-7">
                     <div class="row" style="margin-top: 40px; text-align:left; font-family: 'Raleway', sans-serif;">
@@ -375,8 +375,8 @@
         <div class="col-md-7">
             <div class="row">
                 <div class="col-md-5">
-                    <div class="row topBtnPos"><a id="showAll" href="~/ActivityLogs/Create">Record Activity</a></div>
-                    <div class="row bottomBtnPos"><a id="showAll" href="~/ActivityLogs/Index?#absActivity">Abs Activity History</a></div>
+                    <div class="row topBtnPos"><a class="showAll" href="~/ActivityLogs/Create">Record Activity</a></div>
+                    <div class="row bottomBtnPos"><a class="showAll" href="~/ActivityLogs/Index?#absActivity">Abs Activity History</a></div>
                 </div>
                 <div class="col-md-7">
                     <div class="row" style="margin-top: 40px; text-align:left; font-family: 'Raleway', sans-serif;">
@@ -393,8 +393,8 @@
         <div class="col-md-7">
             <div class="row">
                 <div class="col-md-5">
-                    <div class="row topBtnPos"><a id="showAll" href="~/ActivityLogs/Create">Record Activity</a></div>
-                    <div class="row bottomBtnPos"><a id="showAll" href="~/ActivityLogs/Index?#absActivity">Abs Activity History</a></div>
+                    <div class="row topBtnPos"><a class="showAll" href="~/ActivityLogs/Create">Record Activity</a></div>
+                    <div class="row bottomBtnPos"><a class="showAll" href="~/ActivityLogs/Index?#absActivity">Abs Activity History</a></div>
                 </div>
                 <div class="col-md-7">
                     <div class="row" style="margin-top: 40px; text-align:left; font-family: 'Raleway', sans-serif;">
@@ -411,8 +411,8 @@
         <div class="col-md-7">
             <div class="row">
                 <div class="col-md-5">
-                    <div class="row topBtnPos"><a id="showAll" href="~/ActivityLogs/Create">Record Activity</a></div>
-                    <div class="row bottomBtnPos"><a id="showAll" href="~/ActivityLogs/Index?#absActivity">Abs Activity History</a></div>
+                    <div class="row topBtnPos"><a class="showAll" href="~/ActivityLogs/Create">Record Activity</a></div>
+                    <div class="row bottomBtnPos"><a class="showAll" href="~/ActivityLogs/Index?#absActivity">Abs Activity History</a></div>
                 </div>
                 <div class="col-md-7">
                     <div class="row" style="margin-top: 40px; text-align:left; font-family: 'Raleway', sans-serif;">
@@ -435,8 +435,8 @@
         <div class="col-md-7">
             <div class="row">
                 <div class="col-md-5">
-                    <div class="row topBtnPos"><a id="showAll" href="~/ActivityLogs/Create">Record Activity</a></div>
-                    <div class="row bottomBtnPos"><a id="showAll" href="~/ActivityLogs/Index?#cardioActivity">Cardio Activity History</a></div>
+                    <div class="row topBtnPos"><a class="showAll" href="~/ActivityLogs/Create">Record Activity</a></div>
+                    <div class="row bottomBtnPos"><a class="showAll" href="~/ActivityLogs/Index?#cardioActivity">Cardio Activity History</a></div>
                 </div>
                 <div class="col-md-7">
                     <div class="row" style="margin-top: 40px; text-align:left; font-family: 'Raleway', sans-serif;">
@@ -453,8 +453,8 @@
         <div class="col-md-7">
             <div class="row">
                 <div class="col-md-5">
-                    <div class="row topBtnPos"><a id="showAll" href="~/ActivityLogs/Create">Record Activity</a></div>
-                    <div class="row bottomBtnPos"><a id="showAll" href="~/ActivityLogs/Index?#cardioActivity">Cardio Activity History</a></div>
+                    <div class="row topBtnPos"><a class="showAll" href="~/ActivityLogs/Create">Record Activity</a></div>
+                    <div class="row bottomBtnPos"><a class="showAll" href="~/ActivityLogs/Index?#cardioActivity">Cardio Activity History</a></div>
                 </div>
                 <div class="col-md-7">
                     <div class="row" style="margin-top: 40px; text-align:left; font-family: 'Raleway', sans-serif;">
@@ -471,8 +471,8 @@
         <div class="col-md-7">
             <div class="row">
                 <div class="col-md-5">
-                    <div class="row topBtnPos"><a id="showAll" href="~/ActivityLogs/Create">Record Activity</a></div>
-                    <div class="row bottomBtnPos"><a id="showAll" href="~/ActivityLogs/Index?#cardioActivity">Cardio Activity History</a></div>
+                    <div class="row topBtnPos"><a class="showAll" href="~/ActivityLogs/Create">Record Activity</a></div>
+                    <div class="row bottomBtnPos"><a class="showAll" href="~/ActivityLogs/Index?#cardioActivity">Cardio Activity History</a></div>
                 </div>
                 <div class="col-md-7">
                     <div class="row" style="margin-top: 40px; text-align:left; font-family:'Raleway', sans-serif;">
