--- a/ExerciseGO/Views/Shared/_Layout.cshtml
+++ b/ExerciseGO/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
             </div>
 
             <div class="collapse navbar-collapse" id="navbar-collapse-1">
-                <a class="navbar-brand active" href="~/Home/Index"><img src="~/Content/Image/newLogo.png" /></a>
+                <a class="navbar-brand active" href="~/Home/Index#divContainer"><img src="~/Content/Image/newLogo.png" /></a>
                 <ul class="nav navbar-nav navbar-right">
                     <li id="mapGym"><a href="~/Home/About">Gym Locations</a></li>
                     <li>
